// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip correctly positions tooltip content based on position prop 1`] = `
<div
  class="sc-gEvEer bcpdVK"
>
  Hover over me
  <div
    class="sc-aXZVg hKmjSD"
  >
    Hello!
  </div>
</div>
`;

exports[`Tooltip correctly positions tooltip content based on position prop 2`] = `
<div
  class="sc-gEvEer bcpdVK"
>
  Hover over me
  <div
    class="sc-aXZVg iyZGgQ"
  >
    Hello!
  </div>
</div>
`;

exports[`Tooltip correctly positions tooltip content based on position prop 3`] = `
<div
  class="sc-gEvEer bcpdVK"
>
  Hover over me
  <div
    class="sc-aXZVg bhPypp"
  >
    Hello!
  </div>
</div>
`;

exports[`Tooltip correctly positions tooltip content based on position prop 4`] = `
<div
  class="sc-gEvEer bcpdVK"
>
  Hover over me
  <div
    class="sc-aXZVg hWUniW"
  >
    Hello!
  </div>
</div>
`;
